# aws-readonly-mcp-server

./: .dockerignore  .env.example  .gitignore  Dockerfile  README.md  pyproject.toml
.github/deploy-triggers/: cloud-run.txt
.github/workflows/: ci.yml  deploy-cloud-run.yml  release.yml  validate-config.yml
docs/: actions-trigger-verification-20260612.md  mcp-auth-token-rotation.md
src/aws/: README.md  __init__.py  client_factory.py
src/server/: README.md  __init__.py  action_definitions.py  auth.py  config.py  main.py
src/services/: README.md  __init__.py  cloudwatch_metrics.py  cost_explorer.py  ec2_inventory.py  rds_inventory.py  s3_costs.py  s3_inventory.py  s3_metrics.py  s3_security.py  s3_storage_metrics.py  ses_health.py  trusted_advisor.py
tests/: README.md  test_action_definitions.py  test_cloudwatch_metrics.py  test_config.py  test_cost_explorer.py  test_s3_storage_metrics.py  test_server.py
